--- a/generator-core/pom.xml
+++ b/generator-core/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>generator-parent</artifactId>
         <groupId>fr.aphp.wind.eds.generator</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -90,11 +91,6 @@
             <version>1.5.15</version>
         </dependency>
         <dependency>
-            <groupId>mrpowers</groupId>
-            <artifactId>spark-daria</artifactId>
-            <version>0.35.2-s_2.12</version>
-        </dependency>
-        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.12</artifactId>
             <version>3.1.1</version>
@@ -107,12 +103,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>Spark Packages Repo</id>
-            <url>http://dl.bintray.com/spark-packages/maven</url>
-        </repository>
-    </repositories>
 
 </project>
