--- a/generator-source-synthea/pom.xml
+++ b/generator-source-synthea/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>generator-parent</artifactId>
         <groupId>fr.aphp.wind.eds.generator</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -73,7 +74,7 @@
             <artifactId>synthea</artifactId>
             <version>2.6.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>/Users/chauvin/code/synthea/build/libs/synthea-with-dependencies.jar</systemPath>
+            <systemPath>${project.basedir}/../third-party/synthea-with-dependencies.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
