--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: hchauvin/generator-ci
+    machine: true
     steps:
       - checkout
       #- setup_remote_docker:
