--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           key: sbt-cache
       - run:
           name: Apt
-          command: apt-get update && apt-get install -y python3
+          command: sudo apt-get update && sudo apt-get install -y python3
       - run:
           name: Install third party dependencies
           command: ./make.py dev_third_party
