--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
       - restore_cache:
           key: sbt-cache
       - run:
-          name: Apt
-          command: sudo apt-get update && sudo apt-get install -y python3.7
+          name: pyenv
+          command: pyenv global 3.7.0
       - run:
           name: Install third party dependencies
           command: ./make.py dev_third_party
