--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           name: pyenv
           command: pyenv global 3.7.0
       - run:
+          name: ls
+          command: pwd && ls
+      - run:
           name: Install third party dependencies
           command: ./make.py dev_third_party
       - run:
