--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     machine:
       image: circleci/classic:201808-01
+      docker_layer_caching: true
     steps:
       - checkout
       #- setup_remote_docker:
