--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     machine:
       image: circleci/classic:201808-01
-      docker_layer_caching: true
+#      docker_layer_caching: true
     steps:
       - checkout
       #- setup_remote_docker:
@@ -24,7 +24,7 @@ jobs:
           command: ./make.py dev_format_check
       - run:
           name: Execute tests
-          command: ./make.py test
+          command: ./make.py dev_test
       - run:
           name: Build Docker image
           command: ./make.py docker_build
