--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
       - restore_cache:
           key: sbt-cache
       - run:
+          name: pyenv
+          command: pyenv global 3.7.0
+      - run:
           name: Install third party dependencies
           command: ./make.py dev_third_party
       - run:
