--- a/generator-source-synthea/pom.xml
+++ b/generator-source-synthea/pom.xml
@@ -73,8 +73,6 @@
             <groupId>org.mitre.synthea</groupId>
             <artifactId>synthea</artifactId>
             <version>2.6.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../third-party/synthea-with-dependencies.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -100,5 +98,12 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>lib</id>
+            <url>file://${project.basedir}/../repo</url>
+        </repository>
+    </repositories>
 
 </project>
