--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--<parent>
+        <artifactId>generator-parent</artifactId>
+        <groupId>fr.aphp.wind.eds</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>-->
+
     <groupId>fr.aphp.wind.eds.generator</groupId>
     <artifactId>generator-parent</artifactId>
     <packaging>pom</packaging>
