--- a/generator-target-eds/pom.xml
+++ b/generator-target-eds/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>spark-sql_2.12</artifactId>
             <version>3.0.0-preview2</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-math3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>fr.aphp.wind.eds.generator</groupId>
